5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1595_2894.log
== TEST (2019-03-23 13:06:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
var = input( x + 45 )
# Leitura das entradas e conversao para float:
x = 8 *  a

int( input("valor de a : "))
# Calculo do valor a ser pago, incluindo o frete: 

# Impressao do valor total:
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var = input( x + 45 )
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:09:41) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
var = input ( a + 45)
# Leitura das entradas e conversao para float:

a = int( input("valor de a : "))
# Calculo do valor a ser pago, incluindo o frete: 

# Impressao do valor total:
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var = input ( a + 45)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:10:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
var = input (" a + 45 ")
# Leitura das entradas e conversao para float:

a = int( input("valor de a : "))
# Calculo do valor a ser pago, incluindo o frete: 

# Impressao do valor total:
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = int( input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:12:53) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
a = int ( input (" valor de a :"))
# Leitura das entradas e conversao para float:

var  = input (" a + 45")
# Calculo do valor a ser pago, incluindo o frete: 

# Impressao do valor total:
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = int ( input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 13:17:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
var = input (" var + 45")
# Leitura das entradas e conversao para float:
var  = float(input(" 100 "))

# Calculo do valor a ser pago, incluindo o frete:
total 

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var  = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:52:35) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var  = float(input(" 100.0 * 8"))

# Calculo do valor a ser pago, incluindo o frete:
total = ( " var + 45.0")

# Impressao do valor total:
print(total)
-- OUTPUT:
var + 45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:53:03) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var  = float(input(" 100.0*8"))

# Calculo do valor a ser pago, incluindo o frete:
total = ( " var + 45.0")

# Impressao do valor total:
print(total)
-- OUTPUT:
var + 45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:53:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var  = float(input("100.0 * 8"))

# Calculo do valor a ser pago, incluindo o frete:
total = ( " var + 45.0")

# Impressao do valor total:
print(total)
-- OUTPUT:
var + 45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:53:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var  = float(input("100.0 * 8"))

# Calculo do valor a ser pago, incluindo o frete:
total = ( " var + 45.0")

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.151685
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
var + 45.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
var + 45.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
var + 45.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:54:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var  = float(input("8 * 100"))

# Calculo do valor a ser pago, incluindo o frete:
total = ( " var + 45.0")

# Impressao do valor total:
print(total)
-- OUTPUT:
var + 45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:54:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var  = float(input(8 * 100))

# Calculo do valor a ser pago, incluindo o frete:
total = ( " var + 45.0")

# Impressao do valor total:
print(total)
-- OUTPUT:
800 var + 45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:54:36) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var  = float(input(8 * 100))

# Calculo do valor a ser pago, incluindo o frete:
total = ( " var + 45.0")

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.150659
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
800 var + 45.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
800 var + 45.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
800 var + 45.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:55:00) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var  = float(input(8 * 100))

# Calculo do valor a ser pago, incluindo o frete:
total = ( " var + 45.0")
print(total)

# Impressao do valor total:
print(total)
-- OUTPUT:
800 var + 45.0
 var + 45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:55:04) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var  = float(input(8 * 100))

# Calculo do valor a ser pago, incluindo o frete:
total = ( " var + 45.0")
print(total)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.170339
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
800 var + 45.0
 var + 45.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
800 var + 45.0
 var + 45.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
800 var + 45.0
 var + 45.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:55:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var  = float(input(8 * 100))

# Calculo do valor a ser pago, incluindo o frete:
total = input( " var + 45.0")
print(total)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:55:30) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var  = float(input(8 * 100.0 ))

# Calculo do valor a ser pago, incluindo o frete:
total = input( " var + 45.0")
print(total)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:56:04) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var  = float(input(8 * 100.0 + 45.0 ))

# Calculo do valor a ser pago, incluindo o frete:
total = input( "var")
print(total)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:56:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var  = float(input(8 * 100.0 + 45.0 ))

# Calculo do valor a ser pago, incluindo o frete:
total = input( "var")
print(total)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.172542
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 8, in <module>
    total = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:56:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var  = float(input(8 * 100.0 ))

# Calculo do valor a ser pago, incluindo o frete:
total = input(var + 45)
print(total)

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = input(var + 45)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:56:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var  = float(input(8 * 100.0 ))

# Calculo do valor a ser pago, incluindo o frete:
total =(var + 45)
print(total)

# Impressao do valor total:
print(total)
-- OUTPUT:
800.046.23
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:58:55) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(" a : 100 "))

# Calculo do valor a ser pago, incluindo o frete:
total = a * 8 + 45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = a * 8 + 45
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:59:16) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(" a : 100 "))

# Calculo do valor a ser pago, incluindo o frete:
total = a*8 + 45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = a*8 + 45
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:59:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(" a:100.0 "))

# Calculo do valor a ser pago, incluindo o frete:
total = a*8 + 45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = a*8 + 45
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:00:20) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input( a: 100.0 ))

# Calculo do valor a ser pago, incluindo o frete:
total = a*8 + 45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    var = float(input( a: 100.0 ))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:00:41) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input( 100.0 ))

# Calculo do valor a ser pago, incluindo o frete:
total = var*8 + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
100.054.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:01:21) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input( 100.0 * 8 ))

# Calculo do valor a ser pago, incluindo o frete:
total = var + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
800.046.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 18:01:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input( 100.0 * 8 ))

# Calculo do valor a ser pago, incluindo o frete:
total = var + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.131913
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
800.046.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
800.0401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
800.0124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:02:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input( 100.0 * 8 ))

# Calculo do valor a ser pago, incluindo o frete:


# Impressao do valor total:
print( var + 45.0)
-- OUTPUT:
800.046.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:02:19) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input( 100.0 * 8 + 45.0 ))

# Calculo do valor a ser pago, incluindo o frete:


# Impressao do valor total:
print( var)
-- OUTPUT:
845.01.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 18:02:21) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input( 100.0 * 8 + 45.0 ))

# Calculo do valor a ser pago, incluindo o frete:


# Impressao do valor total:
print( var)
-- EXECUTION TIME:
0.176601
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.01.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0356.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0123987.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:03:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100))

# do valor a ser pago, incluindo o frete:
total= var*8 + 45.0

# Impressao do valor total:
print(total)
-- OUTPUT:
10054.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:03:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100))

# do valor a ser pago, incluindo o frete:
total= var*8 + 45.0

# Impressao do valor total:
print(total)
-- OUTPUT:
10054.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:03:39) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100))

# do valor a ser pago, incluindo o frete:
total= var*8 + 45.0

# Impressao do valor total:
print(total)
-- OUTPUT:
10054.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:03:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100))

# do valor a ser pago, incluindo o frete:
total= var*8 + 45.0

# Impressao do valor total:
print(total)
-- OUTPUT:
10054.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:04:05) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100.0))

# do valor a ser pago, incluindo o frete:
total= (var*8 + 45.0)

# Impressao do valor total:
print(total)
-- OUTPUT:
100.054.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:04:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(100.0))

# do valor a ser pago, incluindo o frete:
total= (var*8 + 45.0)

# Impressao do valor total:
print(total)
-- OUTPUT:
100.054.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:05:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para f
var = float(input(" 100.0 "))

# Calculo do valor a ser pago, incluindo o frete:
total = 845.0

# Impressao do valor total:
print(total)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:08:51) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
var = input (" 100.0 ")
# Leitura das entradas e conversao para 
float(input(" var * 8 "))

# Calculo do valor a ser pago, incluindo o frete:
total = var + 45.0

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:14:13) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
var = float(input (" 100.0 "))
# Leitura das entradas e conversao para

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8 + 45.0

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:14:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
var = float(input (" 100.0 "))
# Leitura das entradas e conversao para

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8 + 45.0

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:16:05) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
var = (input " 100.0 ")
# Leitura das entradas e conversao para

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8 + 45.0

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 3
    var = (input " 100.0 ")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:16:28) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
var = (input (" 100.0 "))
# Leitura das entradas e conversao para

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8 + 45.0

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    total = var * 8 + 45.0
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:16:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
var = (input (" 100.0 "))

total = var * 8 + 45.0

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = var * 8 + 45.0
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:16:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
var = (input (" 100.0 "))

total = var * 8 + 45.0

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = var * 8 + 45.0
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:17:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
var = (input (" 100.0 * 8 + 45.0 "))

print(var)
-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:17:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
var =float (input (" 100.0 * 8 + 45.0 "))

print(var)
-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:17:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
var =float (input (" 100.0*8 + 45.0 "))

print(var)
-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 18:18:13) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
var = int (input (" 100.0*8 + 45.0 "))

print(var)
-- EXECUTION TIME:
0.160703
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2894/main.py", line 3, in <module>
    var = int (input())
ValueError: invalid literal for int() with base 10: '1.23'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:18:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.
var = int (input (" 100.0*8 + 45.0 "))

print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var = int (input())
ValueError: invalid literal for int() with base 10: '1.23'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:24:50) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
a = float(input(" valor de a : "))

# Calculo do valor a ser pago, incluindo o frete:
total = a * 8 + 45.00

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 18:24:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
a = float(input(" valor de a : "))

# Calculo do valor a ser pago, incluindo o frete:
total = a * 8 + 45.00

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.11898
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:48:13) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(" valor de var : "))

# Calculo do valor a ser pago, incluindo o frete:
total = a * 8 + 45.00

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = a * 8 + 45.00
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 21:48:22) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(" valor de var : "))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8 + 45.00

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 21:48:30) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input(" valor de var : "))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8 + 45.00

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.184837
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
